step for miles input

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <form>
         <div class="input">
             <label for="distance">Distance</label>
-            <input type="number" name="distance" id="distance" placeholder="Distance in miles">
+            <input type="number" step="0.01" name="distance" id="distance" placeholder="Distance in miles">
         </div>
         <div class="input">
             <label for="hours">Hours</label>
