bg and boxshadow added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="app">
       <div>
-        <img src="/runners.png" class="logo" alt="Shoe logo" />
+        <img src="/runners.png" class="logo drop-shadow" alt="Shoe logo" />
         <h1>
           RunninRate
         </h1>
@@ -40,7 +40,7 @@
 
             <!-- </div> -->
 
-            <div class="result">
+            <div class="result drop-shadow">
               <p>
               <span id="res-miles">0:00</span>/mi
             </p>
@@ -50,9 +50,6 @@
 
 
         </div>
-        <!-- <p class="read-the-docs">
-          Click on the Vite and TypeScript logos to learn more
-        </p> -->
 
     </div>
     <script type="module" src="/src/main.ts"></script>
