dark mode color fix

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <body>
     <div id="app">
         <img src="/runners.png" class="logo drop-shadow" alt="Shoe logo" />
-        <h1>
-          Pacer
-        </h1>
-
+        <h1>Pacer</h1>
+        <p>Enter in your time and distance<br/>and find your pace</p>
 
         <div class="card">
 
