remove coming soon

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </p>
           </div>
 
-          <p class="secondary">
+          <!-- <p class="secondary">
             Save Time
-            <br/><span class="secondary">(coming soon)</span></p>
+            <br/><span class="secondary">(coming soon)</span></p> -->
         </div>
 
 
