input converted from text to number

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
           <div class="time-display">
             <!-- Inputs -->
-            <input id="hour-input" placeholder="0" class="drop-shadow" type="text"/>
-            <input id="hour-input2" placeholder="0" class="drop-shadow" type="text"/><span>:</span><input id="min-input" placeholder="0" class="drop-shadow" type="text"/>
-            <input id="min-input2" placeholder="0" class="drop-shadow" type="text"/><span>:</span><input id="sec-input" placeholder="0" class="drop-shadow" type="text"/>
-            <input id="sec-input2" placeholder="0" class="drop-shadow" type="text"/>
+            <input id="hour-input" placeholder="0" class="drop-shadow" type="number" step="1"/>
+            <input id="hour-input2" placeholder="0" class="drop-shadow" type="number"/><span>:</span><input id="min-input" placeholder="0" class="drop-shadow" type="text"/>
+            <input id="min-input2" placeholder="0" class="drop-shadow" type="number"/><span>:</span><input id="sec-input" placeholder="0" class="drop-shadow" type="text"/>
+            <input id="sec-input2" placeholder="0" class="drop-shadow" type="number"/>
           </div>
 
           <div class="distance-display">
