--- a/index.html
+++ b/index.html
@@ -53,9 +53,26 @@
             </p>
           </div>
 
-          <!-- <p class="secondary">
-            Save Time
-            <br/><span class="secondary">(coming soon)</span></p> -->
+          <button class="mapToggler">
+            Map Distance
+          </button>
+
+          <span style="font-size: 0.75rem;">Map courtesy of OnTheGoMap</span>
+
+
+          <div id="map-container">
+
+            <iframe
+            id="iframeMap"
+            title="On The Go Map"
+            src="https://onthegomap.com/#/create">
+          </iframe>
+
+          <button class="mapToggler">
+            CLOSE
+          </button>
+
+        </div>
         </div>
 
 
