--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
 
           <div class="distance-display">
-            <input id="distance-input" placeholder="0.0" class="drop-shadow" type="number"/>
+            <input id="distance-input" placeholder="0.0" class="drop-shadow" type="text" pattern="^[+-]?([0-9]+([.][0-9]*)?|[.][0-9]+)$"/>
 
             <label for="distance-input" class="distance-units">
               <span id="dis-units">mi</span>
